--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,29 @@
 /*  your css code here. If applicable */
+:root{
+	background:rgb(135, 206, 235);
+		font-family:sans-serif;
+}
+div>p:first-child{
+	background:black;
+	color:white;
+}
+div>p:nth-child(2){
+	color: black;
+}
+div>p:last-child{
+	color:red;
+}
+li{
+	background:gray;
+	width:50%;
+	padding:10px;
+}
+ul>li:nth-child(odd){
+	background:white;
+}
+ul>li:first-child, ul>li:last-child{
+	font-size:22px;
+}
+ul>li:nth-child(3){
+	background:pink;
+}
